refactor: 메서드 분리 및 toList() 사용